Sync, some changes

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     // var toolbar = Quill.import ( 'modules/toolbar' );
 
     var quill = new Quill('#editor', {
-        debug: 'info',
-        placeholder: 'Compose an epic...',
-        scrollingContainer: '.editor',
+        // debug: 'info',
+        placeholder: 'Start Typing...',
+        scrollingContainer: '#editor',
         theme: 'snow'
     });
 
